correcting z-index of the main content

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -218,6 +218,7 @@ header.app-header .light{
     background: #1E1E20; /*#1E1E20*/
     top: 3.6rem;
     height: 7rem;
+    z-index: 9998;
     /*margin-left: -2rem;*/
 }
 
@@ -258,7 +259,7 @@ header.app-header .light{
     background: #1E1E20; /*#1E1E20*/
     top: 5rem;
     height: 5.9rem;
-    z-index: 2;
+    z-index: 9999;
     margin-right: -1rem;
     margin-top: -1rem;
     padding-right: 1rem;
@@ -419,13 +420,13 @@ ul.lista-alunos > li{
 /* Responsive Typography*/
 
 @media screen and (max-width: 40em) {
-    body {
+    html {
         font-size:90%;
     }
 }
  
 @media screen and (max-width: 30em) {
-    body {
+    html {
         font-size:80%;
     }
 }
